--- a/NaCl/vs-nacl.ToolPaths.props
+++ b/NaCl/vs-nacl.ToolPaths.props
@@ -10,44 +10,8 @@
 
   <PropertyGroup>
 
-    <AndroidApiDir>$(AndroidNdkDir)\platforms\$(AndroidAPILevel)</AndroidApiDir>
-
-    <AndroidIncludeDir>$(AndroidApiDir)\arch-$(PlatformShortName)\usr\include</AndroidIncludeDir>
-    <AndroidLibDir>$(AndroidApiDir)\arch-$(PlatformShortName)\usr\lib</AndroidLibDir>
-
-    <ArchStlDirName Condition="'$(AndroidArch)' == 'armv5te'">armeabi</ArchStlDirName>
-    <ArchStlDirName Condition="'$(AndroidArch)' == 'armv7-a'">armeabi-v7a</ArchStlDirName>
-    <ArchStlDirName Condition="'$(AndroidArch)' == 'x86'">x86</ArchStlDirName>
-
-    <AndroidStlIncludeDir Condition="'$(AndroidStlType)' == 'system'">$(AndroidNdkDir)\sources\cxx-stl\system\include</AndroidStlIncludeDir>
-    <AndroidStlIncludeDir Condition="'$(AndroidStlType)' == 'gnustl_static'">$(AndroidNdkDir)\sources\cxx-stl\gnu-libstdc++\include;$(AndroidNdkDir)\sources\cxx-stl\gnu-libstdc++\libs\$(ArchStlDirName)\include</AndroidStlIncludeDir>
-    <AndroidStlIncludeDir Condition="'$(AndroidStlType)' == 'gnustl_dynamic'">$(AndroidNdkDir)\sources\cxx-stl\gnu-libstdc++\include;$(AndroidNdkDir)\sources\cxx-stl\gnu-libstdc++\libs\$(ArchStlDirName)\include</AndroidStlIncludeDir>
-    <AndroidStlIncludeDir Condition="'$(AndroidStlType)' == 'stlport_static'">$(AndroidNdkDir)\sources\cxx-stl\stlport\stlport</AndroidStlIncludeDir>
-    <AndroidStlIncludeDir Condition="'$(AndroidStlType)' == 'stlport_dynamic'">$(AndroidNdkDir)\sources\cxx-stl\stlport\stlport</AndroidStlIncludeDir>
-
-    <AndroidStlLibPath Condition="'$(AndroidStlType)' == 'gnustl_static'">$(AndroidNdkDir)\sources\cxx-stl\gnu-libstdc++\libs\$(ArchStlDirName)</AndroidStlLibPath>
-    <AndroidStlLibPath Condition="'$(AndroidStlType)' == 'gnustl_dynamic'">$(AndroidNdkDir)\sources\cxx-stl\gnu-libstdc++\libs\$(ArchStlDirName)</AndroidStlLibPath>
-    <AndroidStlLibPath Condition="'$(AndroidStlType)' == 'stlport_static'">$(AndroidNdkDir)\sources\cxx-stl\stlport\libs\$(ArchStlDirName)</AndroidStlLibPath>
-    <AndroidStlLibPath Condition="'$(AndroidStlType)' == 'stlport_dynamic'">$(AndroidNdkDir)\sources\cxx-stl\stlport\libs\$(ArchStlDirName)</AndroidStlLibPath>
-    
-    <AndroidStlLibs Condition="'$(AndroidStlType)' == 'system'">-lstdc++</AndroidStlLibs>
-    <AndroidStlLibs Condition="'$(AndroidStlType)' == 'gnustl_static'">-lstdc++;-lsupc++;-lgnustl_static;-lgcc</AndroidStlLibs>
-    <AndroidStlLibs Condition="'$(AndroidStlType)' == 'gnustl_dynamic'">-lstdc++;-lsupc++;$(AndroidStlLibPath)\libgnustl_shared.so;-lgcc</AndroidStlLibs>
-    <AndroidStlLibs Condition="'$(AndroidStlType)' == 'stlport_static'">-lstdc++;-lstlport_static;-lgcc</AndroidStlLibs>
-    <AndroidStlLibs Condition="'$(AndroidStlType)' == 'stlport_dynamic'">-lstdc++;$(AndroidStlLibPath)\libstlport_shared.so;-lgcc</AndroidStlLibs>
-
-    <GccLibPath       Condition="'$(AndroidArch)' == 'armv5te'" >$(GccLibPath)</GccLibPath>
-    <GccLibPath_Thumb Condition="'$(AndroidArch)' == 'armv5te'" >$(GccLibPath_Thumb)</GccLibPath_Thumb>
-    <GccLibPath       Condition="'$(AndroidArch)' == 'armv7-a'" >$(GccLibPath_Arm7)</GccLibPath>
-    <GccLibPath_Thumb Condition="'$(AndroidArch)' == 'armv7-a'" >$(GccLibPath_Arm7_Thumb)</GccLibPath_Thumb>
-
     <!-- Tool paths -->
-    <AntBatPath>$(AntDir)\bin\ant.bat</AntBatPath>
-    <AndroidAdbPath>$(AndroidSdkDir)\platform-tools\adb.exe</AndroidAdbPath>
-    <JavaCompilerPath>$(JavaHomeDir)\bin\javac.exe</JavaCompilerPath>
-
-    
-    
+        
     <VCInstallDir>$(Registry:HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\VisualStudio\10.0\Setup\VC@ProductDir)</VCInstallDir>
     <VCInstallDir Condition="'$(VCInstallDir)' == ''">$(Registry:HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Microsoft\VisualStudio\10.0\Setup\VC@ProductDir)</VCInstallDir>
     <VCInstallDir Condition="'$(VCInstallDir)' == ''">$(Registry:HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\VCExpress\10.0\Setup\VC@ProductDir)</VCInstallDir>
@@ -68,9 +32,13 @@
     <FrameworkSdkDir Condition="'$(FrameworkSdkDir)' == ''">$(Registry:HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Microsoft\Microsoft SDKs\Windows\v7.0A@InstallationFolder)</FrameworkSdkDir>
 
     <!-- Default system pathing -->
+
+    <NaClIncludeDir></NaClIncludeDir> <!-- TODO -->
+    <NaClLibDir></NaClLibDir> <!-- TODO -->
+
     <ExecutablePath Condition="'$(ExecutablePath)' == ''">$(GccToolsPath);$(PATH);</ExecutablePath>
-    <IncludePath Condition="'$(IncludePath)' == ''">$(AndroidIncludeDir);$(AndroidStlIncludeDir);</IncludePath>
-    <LibraryPath Condition="'$(LibraryPath)' == ''">$(AndroidLibDir);$(AndroidStlLibPath);</LibraryPath>
+    <IncludePath Condition="'$(IncludePath)' == ''">$(NaClIncludeDir);</IncludePath>
+    <LibraryPath Condition="'$(LibraryPath)' == ''">$(NaClLibDir);</LibraryPath>
 
   </PropertyGroup>
   
