--- a/NaCl/vs-nacl.ToolDefaults.props
+++ b/NaCl/vs-nacl.ToolDefaults.props
@@ -27,7 +27,7 @@
       <GccExceptionHandling     Condition="'%(ClCompile.GccExceptionHandling)'      == ''">false</GccExceptionHandling>
       <SoftFloat                Condition="'%(ClCompile.SoftFloat)'                 == ''">false</SoftFloat>
       <PositionIndependentCode  Condition="'%(ClCompile.PositionIndependentCode)'   == ''">true</PositionIndependentCode>
-      <StackProtector           Condition="'%(ClCompile.StackProtector)'            == ''">true</StackProtector>
+      <StackProtector           Condition="'%(ClCompile.StackProtector)'            == ''">false</StackProtector>
 
       <RuntimeTypeInfo          Condition="'%(ClCompile.RuntimeTypeInfo)'           == ''">false</RuntimeTypeInfo>
       <ShortEnums               Condition="'%(ClCompile.ShortEnums)'                == ''">false</ShortEnums>
