removed some android-specific build options
removed most of the compiler and linker option defaults (so toolchain defaults are used, which is probably better)
forced only user headers to be written as dependencies (at least for now)
made 'newlib' toolchain default

--- a/NaCl/Microsoft.Cpp.NaCl.default.props
+++ b/NaCl/Microsoft.Cpp.NaCl.default.props
@@ -12,7 +12,7 @@
     <PlatformShortName>NaCl</PlatformShortName>
     <PlatformArchitecture>32</PlatformArchitecture>
     
-    <PlatformToolset    Condition="'$(PlatformToolset)' == ''">win_x86</PlatformToolset>
+    <PlatformToolset    Condition="'$(PlatformToolset)' == ''">win_x86_newlib</PlatformToolset>
     <NaClArch           Condition="'$(NaClArch)'        == ''">i686</NaClArch>
     
     <IntDir Condition="'$(IntDir)'=='' AND '$(IntermediateOutputPath)'!=''">$(IntermediateOutputPath)</IntDir>
