--- a/NaCl/Microsoft.Cpp.NaCl.default.props
+++ b/NaCl/Microsoft.Cpp.NaCl.default.props
@@ -12,8 +12,9 @@
     <PlatformShortName>NaCl</PlatformShortName>
     <PlatformArchitecture>32</PlatformArchitecture>
     
-    <PlatformToolset    Condition="'$(PlatformToolset)' == ''">win_x86_newlib</PlatformToolset>
-    <NaClArch           Condition="'$(NaClArch)'        == ''">i686</NaClArch>
+    <PlatformToolset    Condition="'$(PlatformToolset)'    == ''">win_x86_newlib</PlatformToolset>
+    <NaClArch           Condition="'$(NaClArch)'           == ''">i686</NaClArch>
+    <NaClTargetPlatform Condition="'$(NaClTargetPlatform)' == ''">pepper_15</NaClTargetPlatform>
     
     <IntDir Condition="'$(IntDir)'=='' AND '$(IntermediateOutputPath)'!=''">$(IntermediateOutputPath)</IntDir>
     <IntDir Condition="'$(IntDir)'=='' AND '$(IntermediateOutputPath)'==''">$(Platform)\$(Configuration)\</IntDir>
